added item type

--- a/test/fixtures/items.yml
+++ b/test/fixtures/items.yml
@@ -4,6 +4,7 @@
 #
 #  id         :integer          not null, primary key
 #  name       :string(255)
+#  type       :string(255)
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
 #  price      :decimal(8, 2)
@@ -20,4 +21,7 @@ one: {}
 # column: value
 #
 two: {}
+#  column: value
+#
+three: {}
 #  column: value
