--- a/test/fixtures/items.yml
+++ b/test/fixtures/items.yml
@@ -4,11 +4,11 @@
 #
 #  id         :integer          not null, primary key
 #  name       :string(255)
-#  type       :string(255)
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
 #  price      :decimal(8, 2)
 #  menu_id    :integer          default(0), not null
+#  item_type  :string(255)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
