--- a/test/fixtures/items.yml
+++ b/test/fixtures/items.yml
@@ -2,13 +2,16 @@
 #
 # Table name: items
 #
-#  id         :integer          not null, primary key
-#  name       :string(255)
-#  created_at :datetime         not null
-#  updated_at :datetime         not null
-#  price      :decimal(8, 2)
-#  menu_id    :integer          default(0), not null
-#  item_type  :string(255)
+#  id          :integer          not null, primary key
+#  name        :string(255)
+#  created_at  :datetime         not null
+#  updated_at  :datetime         not null
+#  price       :decimal(8, 2)
+#  menu_id     :integer          default(0), not null
+#  item_type   :string(255)
+#  requires_id :boolean
+#  nut_allergy :boolean
+#  vegetarian  :boolean
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
