--- a/test/fixtures/roles.yml
+++ b/test/fixtures/roles.yml
@@ -6,7 +6,9 @@
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
 #  is_super   :boolean          default(FALSE)
-#  type       :integer          default(0)
+#  role_type  :integer          default(0)
+#  user_id    :integer
+#  stadium_id :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
