allowed guest to order

--- a/test/fixtures/orders.yml
+++ b/test/fixtures/orders.yml
@@ -10,6 +10,7 @@
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
 #  details    :string(255)
+#  guest_id   :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
