--- a/test/fixtures/order_states.yml
+++ b/test/fixtures/order_states.yml
@@ -1,3 +1,14 @@
+# == Schema Information
+#
+# Table name: order_states
+#
+#  id         :integer          not null, primary key
+#  order_id   :integer
+#  state      :integer
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
