uses registration password now

--- a/test/fixtures/vendors.yml
+++ b/test/fixtures/vendors.yml
@@ -2,12 +2,13 @@
 #
 # Table name: vendors
 #
-#  id         :integer          not null, primary key
-#  name       :string(255)
-#  created_at :datetime         not null
-#  updated_at :datetime         not null
-#  stadium_id :integer
-#  role_id    :integer
+#  id                :integer          not null, primary key
+#  name              :string(255)
+#  created_at        :datetime         not null
+#  updated_at        :datetime         not null
+#  stadium_id        :integer
+#  role_id           :integer
+#  registration_code :string(255)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
