orders largely work with restaurants afaik

--- a/test/fixtures/items.yml
+++ b/test/fixtures/items.yml
@@ -7,11 +7,11 @@
 #  created_at  :datetime         not null
 #  updated_at  :datetime         not null
 #  price       :decimal(8, 2)
-#  menu_id     :integer          default(0), not null
 #  item_type   :string(255)
 #  requires_id :boolean
 #  nut_allergy :boolean
 #  vegetarian  :boolean
+#  category_id :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
