--- a/test/fixtures/locations.yml
+++ b/test/fixtures/locations.yml
@@ -11,6 +11,8 @@
 #  open              :boolean
 #  add_tax           :boolean          default(FALSE)
 #  tax               :decimal(6, 6)
+#  recipient_id      :string(255)
+#  transfer_total    :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
