--- a/config/database.yml
+++ b/config/database.yml
@@ -20,7 +20,7 @@ test:
 
 staging:
   adapter: sqlite3
-  database: db/staging.sqlite3
+  database: db/production.sqlite3
   pool: 5
   timeout: 5000
 
