--- a/test/fixtures/orders.yml
+++ b/test/fixtures/orders.yml
@@ -16,6 +16,7 @@
 #  slug          :string(255)
 #  slug_id       :string(255)
 #  order_number  :integer
+#  user_info_id  :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
