hide when closed done right

--- a/test/fixtures/locations.yml
+++ b/test/fixtures/locations.yml
@@ -12,6 +12,7 @@
 #  add_tax           :boolean          default(FALSE)
 #  tax               :decimal(6, 6)
 #  cash_only         :boolean          default(FALSE)
+#  hide_when_closed  :boolean          default(FALSE)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
