keep track of past transfers

--- a/test/fixtures/orders.yml
+++ b/test/fixtures/orders.yml
@@ -19,6 +19,8 @@
 #  user_info_id  :integer
 #  shnack_cut    :integer          default(0)
 #  location_cut  :integer
+#  withdrawn     :boolean          default(FALSE)
+#  transfer_id   :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
