--- a/test/fixtures/user_infos.yml
+++ b/test/fixtures/user_infos.yml
@@ -7,6 +7,7 @@
 #  number     :string(255)
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
+#  name       :string(255)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
