--- a/test/fixtures/order_modifiers.yml
+++ b/test/fixtures/order_modifiers.yml
@@ -1,3 +1,15 @@
+# == Schema Information
+#
+# Table name: order_modifiers
+#
+#  id            :integer          not null, primary key
+#  order_item_id :integer
+#  quantity      :integer
+#  modifier_id   :integer
+#  created_at    :datetime         not null
+#  updated_at    :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
