Added the ability to describe items

--- a/test/fixtures/items.yml
+++ b/test/fixtures/items.yml
@@ -13,6 +13,7 @@
 #  vegetarian  :boolean
 #  category_id :integer
 #  sold_out    :boolean          default(FALSE)
+#  description :text
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
