--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -21,6 +21,7 @@
 #  name                   :string(255)
 #  account_credit         :integer          default(0)
 #  orders_count           :integer          default(0)
+#  referral_code          :string(255)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
