getting closer to size pricing functionality

--- a/test/fixtures/size_prices.yml
+++ b/test/fixtures/size_prices.yml
@@ -2,12 +2,12 @@
 #
 # Table name: size_prices
 #
-#  id          :integer          not null, primary key
-#  size_id     :integer
-#  modifier_id :integer
-#  price       :integer
-#  created_at  :datetime         not null
-#  updated_at  :datetime         not null
+#  id         :integer          not null, primary key
+#  item_id    :integer
+#  option_id  :integer
+#  price      :integer
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
